--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <style>
+      .favorite-color {
+        color: blue;
+      }
+    </style>
+  </head>
+	<p>My favorite color is <span class="favorite-color">blue</span>.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
